Bug 32946: 'Send list' form in OPAC is misaligned
This patch tweaks the OPAC CSS and the send list template so that form
fields are laid out correctly.

To test, apply the patch and rebuild the OPAC CSS.

- Log in to the OPAC and create a list if necessary.
- In the OPAC's view of the list contents, click the "Send list" button.
- In the pop-up window the form layout should look correct.

--- a/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
@@ -1003,6 +1003,15 @@ fieldset {
         }
     }
 
+    &.brief {
+        label {
+            display: block;
+            font-weight: bold;
+            padding: .3em 0;
+            text-align: left;
+        }
+    }
+
     table {
         font-size: 100%;
     }
